--- a/views/spacedeck.html
+++ b/views/spacedeck.html
@@ -84,8 +84,10 @@
     window.locales.en = {};
     window.locales.de = {};
     window.locales.fr = {};
+    window.locales.oc = {};    
     window.locales.en.translation = {% include "./../locales/en.js" %};
     window.locales.de.translation = {% include "./../locales/de.js" %};
     window.locales.fr.translation = {% include "./../locales/fr.js" %};
+    window.locales.oc.translation = {% include "./../locales/oc.js" %};    
   </script>
 </html>
