--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -37,7 +37,7 @@
 {% include "./tool/toolbar-object.html" %}
 
 <div v-if="active_space && active_space_loaded">
-  <div id="lasso"></div>
+  <!-- <div id="lasso"></div> -->
   <div class="snap-ruler-h" v-bind:style="{top:snap_ruler_y+'px'}"></div>
   <div class="snap-ruler-v" v-bind:style="{left:snap_ruler_x+'px'}"></div>
   <div class="space-empty" v-cloak v-if="active_view == 'space' && !present_mode && active_space_artifacts.length == 0">
@@ -79,7 +79,7 @@
                 'background-color': ''+active_space.background_color,
                 'margin-left': bounds_margin_horiz + 'px',
                 'margin-top': bounds_margin_vert + 'px'}" >
-
+    <div id="lasso"></div>
     <div v-for="a in active_space_artifacts"
          v-bind:style="a.view.style" v-bind:class="a.view.classes"
          v-bind:class="{text-editing:(editing_artifact_id==a._id && (a.view.major_type=='text' || a.view.major_type=='shape'))}"
