Javascript for letting Spanish info accesible
Include the javascript for letting Spanish info accesible 
 - Initialize array 
 - Include translation

--- a/views/spacedeck.html
+++ b/views/spacedeck.html
@@ -85,9 +85,11 @@
     window.locales.de = {};
     window.locales.fr = {};
     window.locales.oc = {};    
+    window.locales.es = {};    
     window.locales.en.translation = {% include "./../locales/en.js" %};
     window.locales.de.translation = {% include "./../locales/de.js" %};
     window.locales.fr.translation = {% include "./../locales/fr.js" %};
     window.locales.oc.translation = {% include "./../locales/oc.js" %};    
+    window.locales.es.translation = {% include "./../locales/es.js" %};        
   </script>
 </html>
