remove stray character in toolbar template

--- a/views/partials/tool/toolbar-object.html
+++ b/views/partials/tool/toolbar-object.html
@@ -1,4 +1,4 @@
-'<div class="toolbar toolbar-properties" v-cloak v-show="active_space_loaded && !is_active_space_role('viewer')" v-bind:class="{in:toolbar_props_in,out:!toolbar_props_in}" v-if="active_space_loaded">
+<div class="toolbar toolbar-properties" v-cloak v-show="active_space_loaded && !is_active_space_role('viewer')" v-bind:class="{in:toolbar_props_in,out:!toolbar_props_in}" v-if="active_space_loaded">
 
   <div class="btn-group light vertical">
     <div class="dropdown top right light"
