--- a/views/partials/tool/toolbar-elements.html
+++ b/views/partials/tool/toolbar-elements.html
@@ -19,7 +19,7 @@
     <button class="btn btn-divider"></button>
 
     <div class="dropdown top left light" v-bind:class="{open:opened_dialog=='shapes'}">
-      <div class="btn-collapse in">
+      <div class="btn-collapse in" title="<%=__("tool_shape")%>">
         <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='shapes'}" v-on:click="open_dialog('shapes')">
           <span class="icon icon-shapes"></span>
           <span class="icon-label"><%=__("tool_shape")%></span>
@@ -31,28 +31,28 @@
       </div>
     </div>
 
-    <button class="btn btn-icon-labeled btn-transparent" v-on:click="start_drawing_scribble()" v-bind:class="{active:active_tool=='scribble'}">
+    <button class="btn btn-icon-labeled btn-transparent" v-on:click="start_drawing_scribble()" v-bind:class="{active:active_tool=='scribble'}" title="<%=__("tool_scribble")%>">
       <span class="icon icon-tool-scribble"></span>
       <span class="icon-label"><%=__("tool_scribble")%></span>
     </button>
     
-    <button class="btn btn-icon-labeled btn-transparent" v-on:click="start_drawing_arrow()" v-bind:class="{active:active_tool=='arrow'}">
+    <button class="btn btn-icon-labeled btn-transparent" v-on:click="start_drawing_arrow()" v-bind:class="{active:active_tool=='arrow'}" title="<%=__("tool_arrow")%>">
       <span class="icon icon-tool-arrow"></span>
       <span class="icon-label"><%=__("tool_arrow")%></span>
     </button>
     
     <div class="dropdown bottom light center">
       <div class="btn-collapse in">
-        <button class="btn btn-transparent btn-icon-labeled" v-on:click="handle_insert_image_url()" v-on:touchstart="handle_insert_image_url()">
+        <button class="btn btn-transparent btn-icon-labeled" v-on:click="handle_insert_image_url()" v-on:touchstart="handle_insert_image_url()" title="<%=__("media")%>">
           <span class="icon icon-upload"></span>
-          <span class="icon-label" >Media</span>
+          <span class="icon-label" ><%=__("media")%></span>
         </button>
       </div>
     </div>
 
     <div class="dropdown bottom light center">
       <div class="btn-collapse in">
-        <button class="btn btn-transparent btn-icon-labeled" v-on:click="start_adding_note()" v-bind:class="{active:active_tool=='note'}">
+        <button class="btn btn-transparent btn-icon-labeled" v-on:click="start_adding_note()" v-bind:class="{active:active_tool=='note'}" title="<%=__("tool_text")%>">
           <span class="icon icon-tool-text"></span>
           <span class="icon-label"><%=__("tool_text")%></span>
         </button>
@@ -61,7 +61,7 @@
 
     <div class="dropdown top left light">
       <div class="btn-collapse">
-        <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='image'}" v-on:click="open_dialog('image')">
+        <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='image'}" v-on:click="open_dialog('image')" title="<%=__("image")%>">
           <span class="icon icon-picture"></span>
           <span class="icon-label"><%=__("image")%></span>
         </button>
@@ -74,7 +74,7 @@
 
     <div class="dropdown top left light" v-bind:class="{open:opened_dialog=='zones'}">
       <div class="btn-collapse in">
-        <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='zones'}" v-on:click="open_dialog('zones')">
+        <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='zones'}" v-on:click="open_dialog('zones')" title="<%=__("tool_zones")%>">
           <span class="icon icon-zone"></span>
           <span class="icon-label"><%=__("tool_zones")%></span>
         </button>
@@ -89,7 +89,7 @@
 
     <div class="dropdown top left center" v-show="logged_in" v-bind:class="{open:opened_dialog=='background'}">
       <div class="btn-collapse in">
-        <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='background'}" v-on:click="open_dialog('background')">
+        <button class="btn btn-transparent btn-icon-labeled" v-bind:class="{open:opened_dialog=='background'}" v-on:click="open_dialog('background')" title="<%=__("tool_canvas")%>">
           <span class="letter">bg</span>
           <span class="icon-label"><%=__("tool_canvas")%></span>
         </button>
@@ -102,9 +102,10 @@
 
     <button class="btn btn-transparent btn-icon-labeled"
             v-if="active_space_role=='admin'"
-            v-on:click="activate_access()">
+            v-on:click="activate_access()"
+            title="<%= __('share') %>">
       <span class="icon icon-share"></span>
-      <span class="icon-label"><%=  __('share') %></span>
+      <span class="icon-label"><%= __('share') %></span>
     </button>
     
     <!--        
@@ -117,7 +118,7 @@
             -->
     <button class="btn btn-transparent btn-icon-labeled" title="Start Presentation (others follow what you see)" v-on:click="toggle_present_mode()" v-bind:class="{open:present_mode}">
       <span class="icon icon-presentation"></span>
-      <span class="icon-label"><%=  __('present') %></span>
+      <span class="icon-label"><%= __('present') %></span>
     </button>
 
   </div>
