--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -12,7 +12,7 @@
 
     </button>
   </span>
-  
+
   <div class="btn-group light round" v-if="zones.length">
     <button class="btn btn-md btn-transparent btn-icon" v-on:click="go_to_previous_zone()" title="<%=__("Previous Zone")%>">
       <span class="icon icon-triangle-4-left"></span>
@@ -151,7 +151,7 @@
         </div>
 
         <!-- video -->
-        <div v-if="a.view.major_type == 'video'" v-videoplayer="a" class="video" v-bind:style="a.view.inner_style + ';background-image: url('+a.view.thumbnail_uri+');'">
+        <div v-if="a.view.major_type == 'video'" v-videoplayer="a" class="video" v-bind:style="a.view.inner_style">
           <video preload="metadata" v-bind:poster="a.view.thumbnail_uri">
             <source v-for="rep in a.payload_alternatives" v-bind:src="rep.payload_uri" v-bind:type="rep.mime" />
             <source v-if="a.payload_uri && a.mime" v-bind:src="a.payload_uri" v-bind:type="a.mime" />
@@ -238,8 +238,8 @@
         </div>
 
         <!-- embed -->
-        <div v-if="a.view.major_type == 'oembed'" class="oembed" 
-          v-bind:style="{'background-image': 'url('+a.view.thumbnail_uri+')'}" 
+        <div v-if="a.view.major_type == 'oembed'" class="oembed"
+          v-bind:style="{'background-image': 'url('+a.view.thumbnail_uri+')'}"
           v-bind:class="{interactive:(a.view.interactive || present_mode)}">
           {{{a.view.oembed_html}}}
           <button class="btn btn-icon btn-primary btn-round interact" v-on:click="a.view.interactive=1" v-if="!a.view.interactive && !present_mode"><span class="icon icon-tool-pointer"></span></button>
