--- a/views/partials/tool/object-options.html
+++ b/views/partials/tool/object-options.html
@@ -7,12 +7,12 @@
 
     <button class="btn btn-divider"></button>
 
-    <button class="btn btn-transparent btn-icon-labeled" v-on:click="toggle_lock_of_selected_artifacts()" v-if="active_space_role=='admin'" title="<%=__("lock")%>">
+    <button class="btn btn-transparent btn-icon-labeled" v-on:click="toggle_lock_of_selected_artifacts()" v-if="active_space_role=='admin' || toolbar_lock_in">
       <span class="icon icon-lock-closed"></span>
       <span class="icon-label"><%=__("lock")%></span>
     </button>
 
-    <button class="btn btn-transparent btn-icon-labeled" v-on:click="toggle_lock_of_selected_artifacts()" v-if="active_space_role=='admin'" title="<%=__("unlock")%>">
+    <button class="btn btn-transparent btn-icon-labeled" v-on:click="toggle_lock_of_selected_artifacts()" v-if="active_space_role=='admin' || toolbar_lock_in">
       <span class="icon icon-lock-open"></span>
       <span class="icon-label"><%=__("unlock")%></span>
     </button>
