put z-index of lock icon higher

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14983,7 +14983,8 @@ button.close {
     text-align: center;
     max-width: 100%;
     overflow-x: hidden;
-    margin-top: -3em; }
+    margin-top: -3em;
+    z-index: 100; }
   .artifact .edit {
     position: absolute;
     top: 10px;
