--- a/views/spacedeck.ejs
+++ b/views/spacedeck.ejs
@@ -28,6 +28,7 @@
     <script src="/javascripts/jquery-2.1.4.min.js"></script>
     <script src="/javascripts/i18next-1.11.2.js"></script>
     <script src="/javascripts/clipboard.js"></script>
+    <script src="/javascripts/fullscreen.js"></script>
 
     <script src="/javascripts/lodash.compat.js"></script>
     <script src="/javascripts/fastclick.js"></script>
