--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -151,8 +151,8 @@
         </div>
 
         <!-- video -->
-        <div v-if="a.view.major_type == 'video'" v-videoplayer="a" class="video" v-bind:style="a.view.inner_style + ';background-image: url('+a.view.thumbnail_uri+');'">
-          <video preload="metadata" v-bind:poster="a.view.thumbnail_uri">
+        <div v-if="a.view.major_type == 'video'" v-videoplayer="a" class="video" v-bind:class="{playing:a.player_view.state=='playing'}" v-bind:style="a.view.inner_style + ';background-image: url('+a.view.thumbnail_uri+');'">
+          <video preload="metadata" onclick="" v-bind:controls="a.player_view.state=='playing' || a.player_view.state=='paused'" v-bind:poster="a.view.thumbnail_uri">
             <source v-for="rep in a.payload_alternatives" v-bind:src="rep.payload_uri" v-bind:type="rep.mime" />
             <source v-if="a.payload_uri && a.mime" v-bind:src="a.payload_uri" v-bind:type="a.mime" />
           </video>
@@ -162,14 +162,13 @@
               <span class="btn-option play">
                 <span class="icon icon-controls-play"></span>
               </span>
-
               <span class="btn-option pause">
                 <span class="icon icon-controls-pause"></span>
               </span>
             </div>
 
             <span class="btn btn-md btn-round btn-icon stop" v-show="a.player_view.state=='playing' || a.player_view.state=='paused'">
-              <span class="icon icon-controls-stop"></span>
+              <span class="icon icon-controls-eject"></span>
             </span>
 
           </div>
