--- a/styles/artifact.scss
+++ b/styles/artifact.scss
@@ -288,7 +288,7 @@
         pointer-events: none;
       }
     }
-    
+
     .title {font-size: 20px; }
     .image {
       height: auto;
@@ -335,7 +335,7 @@
       padding: 10px 15px;
       font-size: 10px;
     }
-    
+
     video {
       width: 100%;
       height: 100%;
@@ -501,7 +501,7 @@ body:not(.present-mode) {
     .Medium {
       cursor: text;
     }
-    
+
     .artifact {
 
       &.selected.text-editing,
@@ -566,16 +566,17 @@ body:not(.present-mode) {
   .progress {
     height: 100%;
     padding: 10px;
-    
+
     background-color: $blue;
     opacity: 0.9;
     text-align: center;
+    font-size: 14px;
   }
   .progress-text {
     text-align: center;
     padding: 8px;
     width: 100%;
-    
+
     position: absolute;
     left: 0px;
     top: 0px;
@@ -586,8 +587,8 @@ body:not(.present-mode) {
   video, audio, .tl-controls, .timeline {
     display: none;
   }
-  
-  
+
+
   background-color: white;
 }
 
@@ -628,7 +629,7 @@ body:not(.present-mode) {
   img {
     width: 200px;
   }
-  
+
   .artifact {
     display: block;
     width: 200px;
