--- a/styles/type.scss
+++ b/styles/type.scss
@@ -7,36 +7,52 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
+  src: url('/fonts/inter-v2-latin-ext_latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/inter-v2-latin-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/inter-v2-latin-ext_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/fonts/inter-v2-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/inter-v2-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/inter-v2-latin-ext_latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
 }
 /* inter-500 - latin-ext_latin */
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
+  src: url('/fonts/inter-v2-latin-ext_latin-500.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/inter-v2-latin-ext_latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/inter-v2-latin-ext_latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/fonts/inter-v2-latin-ext_latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/inter-v2-latin-ext_latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-500.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/inter-v2-latin-ext_latin-500.svg#Inter') format('svg'); /* Legacy iOS */
 }
 /* inter-600 - latin-ext_latin */
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
+  src: url('/fonts/inter-v2-latin-ext_latin-600.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/inter-v2-latin-ext_latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/inter-v2-latin-ext_latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/fonts/inter-v2-latin-ext_latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/inter-v2-latin-ext_latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-600.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/inter-v2-latin-ext_latin-600.svg#Inter') format('svg'); /* Legacy iOS */
 }
 /* inter-900 - latin-ext_latin */
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
+  src: url('/fonts/inter-v2-latin-ext_latin-900.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/inter-v2-latin-ext_latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/inter-v2-latin-ext_latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url('/fonts/inter-v2-latin-ext_latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/inter-v2-latin-ext_latin-900.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-900.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/inter-v2-latin-ext_latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/inter-v2-latin-ext_latin-900.svg#Inter') format('svg'); /* Legacy iOS */
 }
 
 body {
