removed unrelated changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12689,8 +12689,7 @@ button.close {
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         background-position: left top;
-        background-repeat: no-repeat;
-        background-size: cover; }
+        background-repeat: no-repeat; }
       #folder-grid .item > a .item-title {
         display: block;
         border-top: 1px solid rgba(0, 0, 0, 0.05);
