--- a/views/spacedeck.ejs
+++ b/views/spacedeck.ejs
@@ -21,7 +21,8 @@
         webHost: location.host,
         webEndpoint: location.origin,
         apiEndpoint: location.origin,
-        websocketsEndpoint: location.origin.replace("https:","wss:").replace("http:","ws:")
+        websocketsEndpoint: location.origin.replace("https:","wss:").replace("http:","ws:"),
+        options: <%- JSON.stringify(config.spacedeck) %>
       };
     </script>
 
