--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -153,9 +153,10 @@
         <!-- video -->
         <div v-if="a.view.major_type == 'video'" v-videoplayer="a" class="video" v-bind:style="a.view.inner_style + ';background-image: url('+a.view.thumbnail_uri+');'">
           <video preload="metadata" v-bind:poster="a.view.thumbnail_uri">
-            <source v-for="rep in a.payload_alternatives" v-bind:src="rep.payload_uri" v-bind:type="rep.mime" />
-            <source v-if="a.payload_uri && a.mime" v-bind:src="a.payload_uri" v-bind:type="a.mime" />
+            <source v-for="rep in a.view.payload_alternatives" v-bind:src="rep.payload_uri" v-bind:type="rep.mime" />
+            <source v-if="a.view.payload_uri && a.mime" v-bind:src="a.view.payload_uri" v-bind:type="a.view.mime" />
           </video>
+          
 
           <div class="tl-controls">
             <div class="btn btn-md btn-toggle btn-round" v-bind:class="{alt:a.player_view.state=='playing'}">
