--- a/views/partials/space.html
+++ b/views/partials/space.html
@@ -157,7 +157,7 @@
             <source v-if="a.view.payload_uri && a.view.mime" v-bind:src="a.view.payload_uri" v-bind:type="a.view.mime" />
           </video>
           <div class="spinner"></div>
-          <div class="progress" v-bind:style="{width: a.view.progress+'%'}">{{a.description}}</div>
+          <div class="progress" v-bind:style="{width: a.description+'%'}">{{a.description}}</div>
         </div>
 
         <!-- audio -->
